add our students page and register page

--- a/frontend_site/gui/public/index.html
+++ b/frontend_site/gui/public/index.html
@@ -24,6 +24,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
+<link href="https://fonts.googleapis.com/css?family=Cairo|Tajawal&display=swap" rel="stylesheet">
+
     <title>Arab Orphans Committe</title>
     <script src="https://kit.fontawesome.com/4eb1652792.js" crossorigin="anonymous"></script>
   </head>
